--- a/friasco-api/package.json
+++ b/friasco-api/package.json
@@ -15,11 +15,12 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "pino": "^8.14.1"
+    "pino": "^8.14.1",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "eslint": "^8.43.0",
-    "eslint-config-standard": "^17.1.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-n": "^16.0.0",
