--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "<!-- Improved compatibility of back to top link: See: https://github.com/othneildrew/Best-README-Template/pull/73 --> <a name=\"readme-top\"></a> <!-- *** Thanks for checking out the Best-README-Template. If you have a suggestion *** that would make this better, please fork the repo and create a pull request *** or simply open an issue with the tag \"enhancement\". *** Don't forget to give the project a star! *** Thanks again! Now go create something AMAZING! :D -->",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "api": "npm start --prefix friasco-api",
     "client": "npm run dev --prefix friasco-client",
-    "dev": "concurrently \"npm run api\" \"npm run client\""
+    "dev": "concurrently \"npm run api\" \"npm run client\"",
+
+    "test": "echo \"Error: no test specified\" && exit 1",
+
+    "api-lint-fix": "npm run lint-fix --prefix friasco-api",
+    "client-lint-fix": "npm run lint --prefix friasco-client",
+    "lint-fix": "npm run api-lint-fix; npm run client-lint-fix"
   },
   "keywords": [],
   "author": "",
